--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@uploadthing/react": "^6.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "embla-carousel-react": "^8.0.0-rc19",
     "lucide-react": "^0.307.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
@@ -42,6 +43,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "embla-carousel": "^8.0.0-rc19",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
